# kicad-jlc-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pr-checks.yaml  publish.yaml
src/kicad_jlc_manager/: __init__.py  cli.py  component.py  config.py  jlc_api.py  library.py  project.py
tests/: __init__.py  conftest.py  test_component.py  test_config.py  test_jlc_api.py  test_library.py  test_project.py
