[project]
name = "kicad-jlc-manager"
version = "0.1.0"
description = "Project-local JLC component library manager for KiCad"
readme = "README.md"
authors = [
    { name = "Brian Peterson", email = "brian.peterson@cloudshift.cc" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "jlc2kicadlib>=1.0.36",
    "requests>=2.32.4",
]

[project.scripts]
jlcmgr = "kicad_jlc_manager.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/kicad-jlc-manager"
Repository = "https://github.com/yourusername/kicad-jlc-manager.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
