[project]
name = "kicad-jlc-manager"
version = "0.0.0"
description = "Project-local JLC component library manager for KiCad"
readme = "README.md"
authors = [
    { name = "Brian Peterson", email = "brian.peterson@cloudshift.cc" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "jlc2kicadlib>=1.0.36",
    "requests>=2.32.4",
]

[project.scripts]
jlcmgr = "kicad_jlc_manager.cli:main"

[project.urls]
Homepage = "https://github.com/peterb154/kicad-jlc-manager"
Repository = "https://github.com/peterb154/kicad-jlc-manager"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.claude",
    "/tests",
    "/.gitignore",
    "/.gitattributes",
    "/Makefile",
    "/CLAUDE.md",
    "/CHANGELOG.md",
    "/uv.lock",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-semantic-release>=9.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=kicad_jlc_manager",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "chore", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
